# python-mpi

./: .gitignore  Dockerfile  README.md  compose.yml  config.yml  generate_sample_data.py  pyproject.toml  requirements.txt  run.sh  visualize_results.py
data/: mnist_target.csv  sample_data.csv  synthetic_data.csv
data_config/: credit_card_data.py  data_fetcher.py  verify_data.py  visualize_results.py
src/: config.py  data_downloader.py  data_loader.py  kmeans.py  main.py  utils.py
tests/: test_kmeans.py
