[project]
name = "python-mpi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "logging>=0.4.9.6",
    "mpi4py>=4.0.1",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
]
